// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authorization settings index creates snapshot 1`] = `
<DocumentFragment>
  <main
    class="container p-0"
    role="main"
  >
    <div
      class="position-absolute p-5 wrapper undefined"
    >
      <div
        class="d-flex flex-row align-items-center justify-content-center w-100 h-100"
      >
        <div
          class="spinner-border text-primary spinner undefined"
          role="status"
        >
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </div>
      </div>
    </div>
    <div
      class="h3 pb-2 border-bottom title"
    >
      Authorization
    </div>
    <div
      class="mt-4 mt-md-5"
    >
      <p>
        Artifact Hub allows you to setup fine-grained access control based on authorization policies. Authorization polices are written in 
        <a
          class="link text-reset link"
          href="https://www.openpolicyagent.org/docs/latest/#rego"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          rego
        </a>
         and they are evaluated using the 
        <a
          class="link text-reset link"
          href="https://www.openpolicyagent.org"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          Open Policy Agent
        </a>
        . Depending on your requirements, you can use a predefined policy and only supply a data file, or you can provide your custom policy for maximum flexibility. For more information please see the 
        <a
          class="link text-reset link"
          href="https://github.com/artifacthub/hub/blob/master/docs/authorization.md"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          documentation
        </a>
        .
      </p>
      <div
        class="alertWrapper"
        data-testid="alertWrapper"
      />
    </div>
  </main>
</DocumentFragment>
`;

exports[`Authorization settings index creates snapshot 2`] = `
<DocumentFragment>
  <main
    class="container p-0"
    role="main"
  >
    <div
      class="h3 pb-2 border-bottom title"
    >
      Authorization
    </div>
    <div
      class="mt-4 mt-md-5"
    >
      <p>
        Artifact Hub allows you to setup fine-grained access control based on authorization policies. Authorization polices are written in 
        <a
          class="link text-reset link"
          href="https://www.openpolicyagent.org/docs/latest/#rego"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          rego
        </a>
         and they are evaluated using the 
        <a
          class="link text-reset link"
          href="https://www.openpolicyagent.org"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          Open Policy Agent
        </a>
        . Depending on your requirements, you can use a predefined policy and only supply a data file, or you can provide your custom policy for maximum flexibility. For more information please see the 
        <a
          class="link text-reset link"
          href="https://github.com/artifacthub/hub/blob/master/docs/authorization.md"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          documentation
        </a>
        .
      </p>
      <div
        class="custom-control custom-switch mb-4"
      >
        <input
          class="custom-control-input"
          data-testid="swicthAccessControl"
          id="activeAuthorization"
          type="checkbox"
          value="true"
        />
        <label
          class="custom-control-label"
          for="activeAuthorization"
        >
          Fine-grained access control
        </label>
      </div>
      <div
        class="d-flex flex-row mt-4"
      >
        <div
          class="ml-auto"
        >
          <span
            class="position-relative"
          >
            <button
              class="btn btn-sm btn-secondary"
              data-testid="updateAuthorizationPolicyBtn"
              type="button"
            >
              <div
                class="d-flex flex-row align-items-center undefined"
              >
                <div
                  class="d-flex flex-row align-items-center text-uppercase"
                >
                  <svg
                    class="mr-2"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
                    />
                  </svg>
                  <div>
                    Save
                  </div>
                </div>
              </div>
            </button>
          </span>
        </div>
      </div>
      <div
        class="alertWrapper"
        data-testid="alertWrapper"
      />
    </div>
  </main>
</DocumentFragment>
`;
